--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 ext {
+    commonVersion = System.properties['commonVersion'] ?: '0-SNAPSHOT'
+    typerVersion = System.properties['typerVersion'] ?: '0-SNAPSHOT'
+
     springVersion = "4.2.2.RELEASE"
     activeMqVersion = "5.13.4"
     mysqlVersion = "5.1.39"
@@ -7,15 +10,11 @@ ext {
 }
 
 allprojects  {
+    group = 'se.inera.intyg.intygstjanst'
+    version = System.properties['buildVersion'] ?: '0-SNAPSHOT'
+
     apply plugin: 'maven'
     apply plugin: 'org.ajoberstar.grgit'
-
-    def baseVersion = '3.0.'
-
-    group = 'se.inera.intyg.intygstjanst'
-    version = System.env.BUILD_NUMBER != null ? baseVersion + System.env.BUILD_NUMBER : '0-SNAPSHOT'
-    rootProject.ext.commonVersion = (version == '0-SNAPSHOT') ? '0-SNAPSHOT' : "${baseVersion}+"
-    rootProject.ext.typerVersion = (version == '0-SNAPSHOT') ? '0-SNAPSHOT' : "${baseVersion}+"
 }
 
 subprojects {
