--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,24 @@
-import se.inera.intyg.IntygPluginKt
-
-import java.nio.file.Files
-import java.nio.file.Paths
-
 plugins {
-    id "se.inera.intyg.plugin.common" version "3.3.2-SNAPSHOT" apply false
-    id "io.spring.dependency-management" version "1.1.3" apply false
+    id "io.spring.dependency-management" version "1.1.6" apply false
     id "org.gretty" version "4.1.1" apply false
     id 'test-report-aggregation'
+    id 'org.sonarqube' version '4.4.1.3373'
+    id "org.owasp.dependencycheck" version "10.0.4"
+    id 'jacoco'
 }
 
 ext {
-    commonVersion = System.properties['commonVersion'] ?: '3.21.0-SNAPSHOT'
-    infraVersion = System.properties['infraVersion'] ?: '3.21.0-SNAPSHOT'
+    commonVersion = System.properties['commonVersion'] ?: '4.0.0-SNAPSHOT'
+    infraVersion = System.properties['infraVersion'] ?: '4.0.0-SNAPSHOT'
     refDataVersion = System.properties['refDataVersion'] ?: '1.0-SNAPSHOT'
 
-    intygHealthcondRehabilitationSchemasVersion = "1.1.3.1"
-    intygClinicalprocessSchemasVersion = "1.0.24.1"
-    rivtaClinicalprocessSchemasVersion = "4.0.5.2"
-    rivtaGetPersonsPersonSchemasVersion = "3.1.1.1"
-    rivtaInsuranceprocessSchemasVersion = "3.1.0.5.1"
-    rivtaItintegrationMonitoringSchemasVersion = "1.0.0.5.1"
-    schemasContractVersion = "2.1.8.1"
+    intygHealthcondRehabilitationSchemasVersion = "1.1.3.2"
+    intygClinicalprocessSchemasVersion = "1.0.24.2"
+    rivtaClinicalprocessSchemasVersion = "4.0.5.3"
+    rivtaGetPersonsPersonSchemasVersion = "3.1.1.2"
+    rivtaInsuranceprocessSchemasVersion = "3.1.0.5.2"
+    rivtaItintegrationMonitoringSchemasVersion = "1.0.0.5.2"
+    schemasContractVersion = "2.1.8.2"
 
     commonsIoVersion = "2.14.0"
     cxfVersion = "4.0.3"
@@ -34,18 +31,22 @@ ext {
     stAntlr4Version = "4.3.4"
     shedlockSpringVersion = "4.46.0"
 
-    springbootMavenBomVersion = "3.1.5"
+    springbootMavenBomVersion = "3.3.4"
+
+    nvdMirror = 'https://vulnz-nvd-mirror-devtest.intyg.nordicmedtest.se'
 }
 
 allprojects {
-    apply plugin: 'se.inera.intyg.plugin.common'
     apply plugin: "io.spring.dependency-management"
     apply plugin: 'java'
+    apply plugin: 'jacoco'
+    apply plugin: 'org.sonarqube'
+    apply plugin: 'org.owasp.dependencycheck'
 
     group = 'se.inera.intyg.intygstjanst'
-    version = System.properties['buildVersion'] ?: '0-SNAPSHOT'
-    sourceCompatibility = 17
-    targetCompatibility = 17
+    version = System.properties['buildVersion'] ?: '4.0.0-SNAPSHOT'
+    sourceCompatibility = 21
+    targetCompatibility = 21
 
     dependencyManagement {
         imports {
@@ -66,7 +67,7 @@ allprojects {
         testImplementation "junit:junit"
         testImplementation "org.junit.jupiter:junit-jupiter-api"
         testImplementation "org.junit.jupiter:junit-jupiter-params"
-        testImplementation "org.mockito:mockito-inline"
+        testImplementation "org.mockito:mockito-core"
         testImplementation "org.mockito:mockito-junit-jupiter"
         testImplementation "se.inera.intyg.refdata:refdata:${refDataVersion}"
 
@@ -77,28 +78,8 @@ allprojects {
         testRuntimeOnly "org.junit.vintage:junit-vintage-engine"
     }
 
-    tasks.register('createVersionPropertyFile', VersionPropertyFileTask)
-
-    if (project.hasProperty('codeQuality')) {
-        tasks.register('spotbugsIncludesAndExcludes') {
-            dependsOn ":unzipBuildTools"
-            def spotbugsToolDir = "${rootProject.layout.buildDirectory.get().asFile}/build-tools/spotbugs"
-            spotbugsMain {
-                includeFilter.set(file("${spotbugsToolDir}/spotbugsIncludeFilter.xml"))
-                excludeFilter.set(file("${spotbugsToolDir}/spotbugsExcludeFilter.xml"))
-            }
-        }
-
-        checkstyleMain.dependsOn createVersionPropertyFile
-        jacocoTestReport.mustRunAfter createVersionPropertyFile
-        spotbugsMain.dependsOn('spotbugsIncludesAndExcludes')
-        spotbugsTest.enabled(false)
-        dependencies { spotbugsSlf4j "org.slf4j:slf4j-simple" }
-    }
-
     compileJava { options.encoding = "UTF-8" }
     compileJava.dependsOn processResources
-    compileTestJava.dependsOn createVersionPropertyFile
     test { useJUnitPlatform() }
 
     repositories {
@@ -110,34 +91,50 @@ allprojects {
             }
         }
     }
+
+    jacocoTestReport {
+        dependsOn test
+
+        reports {
+            xml.required = true
+            html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+        }
+
+        afterEvaluate {
+            classDirectories.setFrom(files(classDirectories.files.collect {
+                fileTree(dir: it, exclude: [
+                        "**/testability/**",
+                        "**/integrationtest/**"
+                ])
+            }))
+        }
+    }
 }
 
 subprojects.collect {subproject -> subproject.name }.each { subprojectName ->
     dependencies { testReportAggregation project(":${subprojectName}") }
 }
 
-tasks.register('tagRelease', TagReleaseTask)
-
-tasks.register('unzipBuildTools', Copy) {
-    into "${rootProject.layout.buildDirectory.get().asFile}/build-tools/"
-    from { zipTree(rootProject.buildscript.configurations.classpath.find { it.name.contains("se.inera.intyg.plugin.common") })
-            .matching { include "/spotbugs/**", "/git_hooks/**" }
+sonar {
+    properties {
+        property "sonar.projectKey", "intyg-intygstjanst"
+        property "sonar.projectName", "intyg-intygstjanst"
+        property "sonar.dependencyCheck.htmlReportPath", layout.buildDirectory.file("reports/dependency-check-report.html")
+        property "sonar.dependencyCheck.htmlReportPath", layout.buildDirectory.file("reports/dependency-check-report.json")
     }
 }
 
-tasks.register('applyGitHooks') {
-    dependsOn unzipBuildTools
-    doLast {
-        def repository = IntygPluginKt.findGitRepository(project.rootProject.projectDir)
-        def gitHooksDir = "${rootProject.layout.buildDirectory.get().asFile}/build-tools/git_hooks"
-        def commitMsg = file("${gitHooksDir}/commit-msg")
-        def preCommit = file("${gitHooksDir}/pre-commit")
-        def toDir = Paths.get(repository.directory.path, "hooks")
-
-        if (!Files.exists(toDir)) { Files.createDirectory(toDir) }
-        IntygPluginKt.copyFile(commitMsg, toDir)
-        IntygPluginKt.copyFile(preCommit, toDir)
+dependencyCheck {
+    formats = List.of("HTML", "JSON")
+    nvd {
+        datafeedUrl = "${nvdMirror}"
     }
 }
 
-createVersionPropertyFile.dependsOn(applyGitHooks)
+reporting {
+    dependencies {
+        testReportAggregation project(':intygstjanst-persistence')
+        testReportAggregation project(':intygstjanst-web')
+        testReportAggregation project(':intygstjanst-liquibase-runner')
+    }
+}
