--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
 ext {
     commonVersion = System.properties['commonVersion'] ?: '4.0.0-SNAPSHOT'
     infraVersion = System.properties['infraVersion'] ?: '4.0.0-SNAPSHOT'
-    refDataVersion = System.properties['refDataVersion'] ?: '1.0-SNAPSHOT'
+    refDataVersion = '20'
 
     intygHealthcondRehabilitationSchemasVersion = "1.1.3.2"
     intygClinicalprocessSchemasVersion = "1.0.24.2"
@@ -69,7 +69,6 @@ allprojects {
         testImplementation "org.junit.jupiter:junit-jupiter-params"
         testImplementation "org.mockito:mockito-core"
         testImplementation "org.mockito:mockito-junit-jupiter"
-        testImplementation "se.inera.intyg.refdata:refdata:${refDataVersion}"
 
         testCompileOnly 'org.projectlombok:lombok'
         testAnnotationProcessor 'org.projectlombok:lombok'
