--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -40,10 +40,9 @@
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
   </filter>
 
-
   <filter>
-    <filter-name>LogMDCFilter</filter-name>
-    <filter-class>se.inera.intyg.infra.monitoring.logging.LogMDCServletFilter</filter-class>
+    <filter-name>MdcServletFilter</filter-name>
+    <filter-class>se.inera.intyg.intygstjanst.logging.MdcServletFilter</filter-class>
   </filter>
 
   <filter-mapping>
@@ -52,7 +51,7 @@
   </filter-mapping>
 
   <filter-mapping>
-    <filter-name>LogMDCFilter</filter-name>
+    <filter-name>MdcServletFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
