--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "io.spring.dependency-management" version "1.1.6" apply false
     id "org.gretty" version "4.1.5" apply false
     id 'test-report-aggregation'
-    id 'org.sonarqube' version '4.4.1.3373'
+    id 'org.sonarqube' version '5.1.0.4882'
     id "org.owasp.dependencycheck" version "10.0.4"
     id 'jacoco'
 }
@@ -40,8 +40,6 @@ allprojects {
     apply plugin: "io.spring.dependency-management"
     apply plugin: 'java'
     apply plugin: 'jacoco'
-    apply plugin: 'org.sonarqube'
-    apply plugin: 'org.owasp.dependencycheck'
 
     group = 'se.inera.intyg.intygstjanst'
     version = System.properties['buildVersion'] ?: '4.0.0-SNAPSHOT'
@@ -122,16 +120,15 @@ sonar {
     properties {
         property "sonar.projectKey", "intyg-intygstjanst"
         property "sonar.projectName", "intyg-intygstjanst"
-        property "sonar.dependencyCheck.htmlReportPath", layout.buildDirectory.file("reports/dependency-check-report.html")
-        property "sonar.dependencyCheck.htmlReportPath", layout.buildDirectory.file("reports/dependency-check-report.json")
+        property "sonar.dependencyCheck.jsonReportPath", "${layout.buildDirectory.get()}/reports/dependency-check-report.json" as String
+        property "sonar.dependencyCheck.htmlReportPath", "${layout.buildDirectory.get()}/reports/dependency-check-report.html" as String
     }
 }
 
 dependencyCheck {
     formats = List.of("HTML", "JSON")
-    nvd {
-        datafeedUrl = "${nvdMirror}"
-    }
+    nvd.setDatafeedUrl(nvdMirror)
+    analyzers.setAssemblyEnabled(false)
 }
 
 reporting {
