--- a/web/build.gradle
+++ b/web/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation "se.inera.intyg.refdata:refdata-featureK1J-357:${refDataVersion}"
 
     implementation "co.elastic.logging:logback-ecs-encoder:${logbackEcsEncoderVersion}"
+    implementation "com.fasterxml.jackson.jakarta.rs:jackson-jakarta-rs-json-provider"
     implementation "com.google.guava:guava:${guavaVersion}"
     implementation "commons-io:commons-io:${commonsIoVersion}"
     implementation "io.prometheus:simpleclient_servlet"
@@ -99,7 +100,6 @@ dependencies {
     compileOnly "jakarta.persistence:jakarta.persistence-api"
     runtimeOnly "se.inera.intyg.infra:hsa-integration-intyg-proxy-service:${infraVersion}"
     runtimeOnly "com.mysql:mysql-connector-j"
-    runtimeOnly "com.fasterxml.jackson.jakarta.rs:jackson-jakarta-rs-json-provider"
 
     testImplementation "org.springframework:spring-test"
     testImplementation "org.xmlunit:xmlunit-legacy"
