--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -68,7 +68,7 @@
 
   <servlet>
     <servlet-name>metrics</servlet-name>
-    <servlet-class>io.prometheus.client.exporter.MetricsServlet</servlet-class>
+    <servlet-class>io.prometheus.client.servlet.jakarta.exporter.MetricsServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
