--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -1,7 +1,7 @@
 project.name=intyg
 
 artifact.name=intygstjanst
-artifact.version=4.0.0.15
+artifact.version=4.0.0.15.0
 
 context.path=inera-certificate
 
@@ -14,8 +14,8 @@ builder.image.tag=21.0.2
 runtime.image=tomcat-base
 runtime.image.tag=10.1.30.1
 
-dependencies.infra.version=4.0.0.+
-dependencies.common.version=4.0.0.+
+dependencies.infra.version=4.0.0.11
+dependencies.common.version=4.0.0.11
 
 dependencies.infra.version.resolved=4.0.0.11
 dependencies.common.version.resolved=4.0.0.11
