--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -108,10 +108,15 @@ integration.intygproxyservice.unit.endpoint=/api/v1/unit
 integration.intygproxyservice.credentialsforperson.endpoint=/api/v1/credentialsForPerson
 integration.intygproxyservice.certificationperson.endpoint=/api/v1/certificationPerson
 integration.intygproxyservice.lastupdate.endpoint=/api/v1/lastUpdate
-integration.intygproxyservice.person.endpoint=/api/v1/person
-integration.intygproxyservice.persons.endpoint=/api/v1/persons
 integration.intygproxyservice.provider.endpoint=/api/v1/healthcareprovider
 
+################################################
+#
+# PU-Integration Configurations
+#
+################################################
+integration.intygproxyservice.person.endpoint=/api/v1/person
+integration.intygproxyservice.persons.endpoint=/api/v1/persons
 
 ################################################
 #
