--- a/devops/dev/config/application-dev.properties
+++ b/devops/dev/config/application-dev.properties
@@ -20,11 +20,11 @@
 activemq.broker.username=activemqUser
 activemq.broker.password=activemqPassword
 
-db.server = localhost
-db.port = 3306
-db.name = intyg
-db.username = intyg
-db.password = intyg
+db.server=localhost
+db.port=3306
+db.name=intyg
+db.username=intyg
+db.password=intyg
 db.pool.maxSize=5
 
 # Spring profile "h2" activates a H2 console on this port
@@ -45,3 +45,5 @@ ntjp.ws.key.manager.password=dummy
 ntjp.ws.truststore.password=dummy
 
 hash.salt=salt
+
+# unit.mapping.config.path=${application.dir}/config/care-provider-mapping-config.json
