--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id "io.spring.dependency-management" version "1.1.6" apply false
-    id "org.gretty" version "4.1.5" apply false
+    id "org.gretty" version "4.1.10" apply false
     id 'test-report-aggregation'
-    id 'org.sonarqube' version '6.3.1.5724'
-    id "org.owasp.dependencycheck" version "12.1.6"
+    id 'org.sonarqube' version '7.2.2.6593'
+    id "org.owasp.dependencycheck" version "12.1.9"
     id 'jacoco'
+    id 'org.cyclonedx.bom' version '3.1.0'
 }
 
 ext {
@@ -36,22 +36,24 @@ ext {
 }
 
 allprojects {
-    apply plugin: "io.spring.dependency-management"
     apply plugin: 'java'
     apply plugin: 'jacoco'
 
     group = 'se.inera.intyg.intygstjanst'
     version = System.properties['buildVersion'] ?: '4.0.0-SNAPSHOT'
-    sourceCompatibility = 21
-    targetCompatibility = 21
 
-    dependencyManagement {
-        imports {
-            mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}"
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
         }
     }
 
     dependencies {
+        implementation platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")
+        annotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")
+        testImplementation platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")
+        testAnnotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}")
+
         implementation "ch.qos.logback:logback-classic"
         implementation "jakarta.annotation:jakarta.annotation-api"
         implementation "jakarta.jws:jakarta.jws-api:${jakartaJwsApiVersion}"
@@ -80,7 +82,9 @@ allprojects {
     }
 
     compileJava.dependsOn processResources
-    test { useJUnitPlatform() }
+    testing.suites {
+        test { useJUnitJupiter() }
+    }
 
     repositories {
         mavenLocal()
